--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 </style>
 <body>
     <h2>User Names</h2>
-    <table id="stalas">
-        <tr>
-            
-        </tr>
-    </table>
-    <script src="./recursion.js"></script>
+    <div id="container">
+      
+    </div>
+    <script src="./pokeapi.js"></script>
 </body>
 </html>
